--- a/sourse/pug/blocks/sNews/_sNews.scss
+++ b/sourse/pug/blocks/sNews/_sNews.scss
@@ -44,7 +44,9 @@
 			margin-top: rem(24);
 		}
 	}
-
+	.services-list {
+		margin-bottom: 0;
+	}
 	@include media-breakpoint-up(xl) {
 	}
 	@include media-breakpoint-up(lg) {
