--- a/sourse/pug/blocks/sServiceHead/_sServiceHead.scss
+++ b/sourse/pug/blocks/sServiceHead/_sServiceHead.scss
@@ -51,6 +51,25 @@
 			}
 		}
 	}
+	&--for-what {
+		padding-top: rem(32);
+		@include media-breakpoint-up(lg) {
+			padding-top: rem(80);
+		}
+		.services-description-text {
+			margin-bottom: rem(32);
+			font-size: rem(16);
+			@include media-breakpoint-up(lg) {
+				margin-bottom: rem(24);
+			}
+		}
+		.services-list {
+			margin-bottom: rem(56);
+			@include media-breakpoint-up(lg) {
+				margin-bottom: rem(28);
+			}
+		}
+	}
 	@include media-breakpoint-up(xl) {}
 	@include media-breakpoint-up(lg) {}
 	@include media-breakpoint-up(md) {}
