--- a/sourse/pug/pages/03-Service.pug
+++ b/sourse/pug/pages/03-Service.pug
@@ -44,7 +44,7 @@ block pagecontent
 					+ddContent2('Формируем принципы общения с аудиторией')
 						+ddContent('Коммуникационная стратегия')
 		+downloadLink('Скачать презентацию (PDF)')
-	+sCard(`Портфолио по стратегии`)
+	+sCard(`Портфолио по стратегии`).indent-bottom
 		.col-md-12
 			+cardItem('Выбери цвет настроения!', 'Стратегия', 'card-bg-1.jpg').--horizontal.text-lg-white
 		.col-md-6 
