--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -19,6 +19,10 @@
 	font-size:math.div(27,10)*1rem;
 	width: math.div(27,27)*1em;
 }
+.icon-chevron-left-btn {
+	font-size:math.div(16,10)*1rem;
+	width: math.div(16,16)*1em;
+}
 .icon-chevron-right {
 	font-size:math.div(16,10)*1rem;
 	width: math.div(16,16)*1em;
@@ -75,6 +79,10 @@
 	font-size:math.div(16,10)*1rem;
 	width: math.div(16,16)*1em;
 }
+.icon-twitter {
+	font-size:math.div(24,10)*1rem;
+	width: math.div(25,24)*1em;
+}
 .icon-viber {
 	font-size:math.div(16,10)*1rem;
 	width: math.div(16,16)*1em;
@@ -82,6 +90,10 @@
 .icon-vk {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
+}
+.icon-vkontakte {
+	font-size:math.div(24,10)*1rem;
+	width: math.div(25,24)*1em;
 }
 .icon-whatsapp {
 	font-size:math.div(16,10)*1rem;
