--- a/sourse/sass/_vars.scss
+++ b/sourse/sass/_vars.scss
@@ -100,6 +100,7 @@ $warning: $yellow !default;
 $danger: $red !default;
 $light: #C2C2C2 !default;
 $dark: $gray-900 !default;
+$gray-dark: #ECECEC;
 // scss-docs-end theme-color-variables
 
 // scss-docs-start theme-colors-map
