--- a/sourse/pug/blocks/sCard/_sCard.scss
+++ b/sourse/pug/blocks/sCard/_sCard.scss
@@ -20,6 +20,12 @@
 			margin-top: rem(16);
 		}
 	}
+	.spinner {
+		margin-bottom: rem(56);
+		@include media-breakpoint-up(lg) {
+			margin-bottom: rem(80);
+		}
+	}
 	@include media-breakpoint-up(xl) {}
 	@include media-breakpoint-up(lg) {}
 	@include media-breakpoint-up(md) {}
