--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -19,6 +19,10 @@
 	font-size:math.div(27,10)*1rem;
 	width: math.div(27,27)*1em;
 }
+.icon-chevron-down {
+	font-size:math.div(16,10)*1rem;
+	width: math.div(16,16)*1em;
+}
 .icon-chevron-left-btn {
 	font-size:math.div(16,10)*1rem;
 	width: math.div(16,16)*1em;
