--- a/sourse/pug/pages/17-news.pug
+++ b/sourse/pug/pages/17-news.pug
@@ -32,6 +32,7 @@ block pagecontent
 		+news-item(5, `Компания DDVB вошла в&nbsp;ТОП-5 рейтинга по&nbsp;маркетинговому консалтингу`, `21&nbsp;января`)
 		+news-item(1, `Дмитрий Пёрышков в&nbsp;жюри премии WOW Awards`, `21&nbsp;января`)
 		+news-item(7, `Дмитрий Пёрышков выступил на&nbsp;Russian Creativity Week`, `12&nbsp;сентября 2020`)
+		+purePreloader()
 	//- +sNumbers
 	//- +sCases
 	//- +sForm()
