--- a/sourse/pug/blocks/sServiceHead/_sServiceHead.scss
+++ b/sourse/pug/blocks/sServiceHead/_sServiceHead.scss
@@ -104,7 +104,12 @@
 			min-width: auto;
 			max-width: calc(100% - 32px);
 			width: 100%;
-			max-height: rem(400);
+			.dropdown-item {
+				white-space: normal;
+			}
+			&.active {
+				display: block;
+			}
 		}
 	}
 	@include media-breakpoint-up(xl) {}
@@ -115,3 +120,101 @@
 	@include media-breakpoint-only(xl) {}
 	@include media-breakpoint-down(xl) {}
 } // end.sServiceHead
+
+.services-description-text {
+	font-size: rem(22);
+	margin-bottom: rem(32);
+	@include media-breakpoint-up(lg) {
+		font-size: rem(24);
+		margin-bottom: rem(56);
+	}
+}
+
+.services-list {
+	margin-bottom: rem(28);
+	@include media-breakpoint-up(lg) {
+		margin-bottom: rem(48);
+	}
+	&__item {
+		list-style-type: none;
+		display: inline-block;
+		&:not(:last-child) {
+			&:after {
+				content: '/';
+				padding-right: rem(2);
+				padding-left: rem(2);
+				font-size: rem(22);
+				color: $light;
+				@include media-breakpoint-up(lg) {
+					font-size: rem(24);
+				}
+			}
+		}
+	}
+	&__link {
+		@include mt;
+		display: inline-block;
+		background-color: transparent;
+		border: none;
+		font-size: rem(22);
+		padding: 0;
+		border-bottom: 2px solid $primary;
+		color: $body-color;
+		&:hover {
+			border-bottom-color: transparent;
+			color: $light;
+		}
+		@include media-breakpoint-up(lg) {
+			font-size: rem(24);
+		}
+		&.active {
+			border-bottom-color: transparent;
+			color: $light;
+		}
+	}
+	&--indent {
+		margin-bottom: 0;
+		@include media-breakpoint-up(lg) {
+			margin-bottom: 0;
+		}
+	}
+	&--portfolio {
+		display: none;
+		@include media-breakpoint-up(md) {
+			display: block;
+		}
+	}
+}
+
+.services-goods {
+	display: flex;
+	flex-direction: column;
+	@include media-breakpoint-up(sm) {
+		margin-bottom: rem(56);
+		flex-direction: row;
+		align-items: center;
+	}
+	span {
+		&:first-child {
+			font-size: rem(64);
+			color: #EDC228;
+			@include media-breakpoint-up(sm) {
+				margin-right: rem(15);
+			}
+		}
+		&:last-child {
+			font-size: rem(16);
+			max-width: rem(94);
+			@include media-breakpoint-up(sm) {
+				font-size: rem(14);
+				margin-top: rem(20);
+			}
+		}
+	}
+	&--indent {
+		margin-bottom: rem(40);
+		@include media-breakpoint-up(sm) {
+			margin-bottom: 0;
+		}
+	}
+}
