--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -15,7 +15,9 @@
 	// }
 	padding-top: 1rem;
 	padding-bottom: 1rem;
-
+	.row {
+		align-items: center;
+	}
 	@include media-breakpoint-up(md) {}
 
 	@include media-breakpoint-up(sm) {}
