--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -79,6 +79,10 @@
 	font-size:math.div(14,10)*1rem;
 	width: math.div(18,14)*1em;
 }
+.icon-search {
+	font-size:math.div(24,10)*1rem;
+	width: math.div(24,24)*1em;
+}
 .icon-telegram {
 	font-size:math.div(16,10)*1rem;
 	width: math.div(16,16)*1em;
