--- a/sourse/pug/pages/14-search-3.pug
+++ b/sourse/pug/pages/14-search-3.pug
@@ -20,6 +20,7 @@ block pagecontent
 	+page-head(title)
 	+formBlock({
 		text: '',
+		form: true,
 		btn: false,
 		error: 'Извините, по&nbsp;вашему запросу ничего не&nbsp;найдено. Измените поисковый запрос'
 	})
