--- a/sourse/pug/blocks/mixin-wrap/components/soc.pug
+++ b/sourse/pug/blocks/mixin-wrap/components/soc.pug
@@ -10,8 +10,9 @@ mixin soc()
 		if block
 			block
 		else
-			+item-sos('fb')
-			+item-sos('instagram')
-			+item-sos('telegram')
+			+item-sos('youtube')
+			+item-sos('instagram2')
+			+item-sos('facebook')
+			+item-sos('behance')
 
 //- /social buttons 
