--- a/sourse/pug/blocks/top-nav/_navMenu.scss
+++ b/sourse/pug/blocks/top-nav/_navMenu.scss
@@ -21,7 +21,8 @@
 		display: block;
 		padding: 0;
 		color: $body-color;
-		border-bottom: 1px solid transparent;
+		border-bottom: 2px solid transparent;
+		white-space: nowrap;
 		&:hover {
 			border-bottom-color: #FFD43B;
 		}
