--- a/sourse/pug/blocks/top-nav/_top-nav.pug
+++ b/sourse/pug/blocks/top-nav/_top-nav.pug
@@ -24,14 +24,23 @@ mixin top-nav()
 			.row
 				.col-auto
 					+logo()
-
 				.col
-					.menu-mobile.menu-mobile--js
-						+menu-toggle()
-						+mnu()
+					.row
+
+						.col-auto
+							.menu-mobile.menu-mobile--js
+								+menu-toggle()
+								+mnu()
+						.col
+							+search()
 				//- .col
-				//- 	+search()
-				//- .col
+
+				.col-auto
+					a(href="mailto:info@ddvb.ru") info@ddvb.ru 
+				.col-auto
+					+soc
+				.col-auto
+					+e.btn(href="#") Оставить заявку
 				.col-auto.d-lg-none
 					+menu-toggle()
 	// end top-nav
