--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -10,6 +10,9 @@
 	width: 100%;
 	left: 0;
 	top: 0;
+	.row{
+		--bs-gutter-x: #{rem(25px)};
+	}
 	
 	// background: svg-load('../svg/check.svg',  stroke=$primary); 
 	// 
@@ -29,6 +32,13 @@
 	padding-bottom: 1rem;
 	.row {
 		align-items: center;
+	}
+	a{
+		color: $body-color;
+	}
+	&__btn{
+		@extend .btn, .btn-primary;
+		width: 170px;
 	}
 	@include media-breakpoint-up(md) {}
 
