--- a/sourse/pug/blocks/sCard/_sCard.scss
+++ b/sourse/pug/blocks/sCard/_sCard.scss
@@ -48,7 +48,7 @@
 		margin-right: 0;
 		// margin-bottom: rem(16);
 	}
-	.cardWrrap__content {
+	&__content {
 		position: absolute;
 		top: rem(40);
 		left: rem(16);
