--- a/sourse/sass/_vars.scss
+++ b/sourse/sass/_vars.scss
@@ -112,16 +112,14 @@ $theme-colors: (
   "info": $info,
   "warning": $warning,
   "danger": $danger,
+  "gray": $gray-dark,
   "light": $light,
   "dark": $dark) !default;
 // scss-docs-end theme-colors-map
 
 $theme-colors: map-remove($theme-colors, 
-"info", 
-"light", 
-"dark",  
-"success",
-'warning', 
+"info",  
+"dark", 
 );
 
 // scss-docs-start theme-colors-rgb
